scss/style.scss
/* ... */
.pagefind-ui__button {
    margin-top: 1rem;
    @extend .btn;
    @extend .btn-outline-convrtr;
}
.pagefind-ui__filter-panel,
.pagefind-ui__results-area {
    @extend .col-12;
    padding: 0 !important;
}
@media (min-width:869px) {
    .pagefind-ui__filter-panel {
        flex: 0 0 auto;
        width: 25%;
    }
    .pagefind-ui__results-area {
        flex: 0 0 auto;
        width: 75%;
        padding-left: 1rem !important;
    }
}
@media (min-width:1201px) {
    .pagefind-ui__filter-panel {
        flex: 0 0 auto;
        width: 16.66666667%;
    }
    .pagefind-ui__results-area {
        flex: 0 0 auto;
        width: 83.33333333%;
    }
}
.pagefind-ui__filter-group {
    @extend .list-group;
}
.pagefind-ui__filter-value {
    @extend .list-group-item;
    @extend .list-group-item-action;
    padding: 0;
}
.pagefind-ui__filter-name {
    font-size: 1.5rem;
}
.pagefind-ui__filter-block summary::-webkit-details-marker,
.pagefind-ui__filter-block summary::marker {
    display: none;
    content: "";
}
.pagefind-ui__filter-block summary::before {
    content: "\f148";
    display: inline-block;
    font-family: bootstrap-icons !important;
    font-style: normal;
    font-weight: normal !important;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    font-size: 1rem;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    padding: 0.25rem;
    margin-right: 0.25rem;
    --bs-bg-opacity: 1;
    background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
    --bs-border-opacity: 1;
    border-color: rgba(var(--bs-dark-rgb), var(--bs-border-opacity)) !important;
    border-radius: var(--bs-border-radius) !important;
    color: var(--bs-dark-rgb);
}
.pagefind-ui__filter-block summary::after {
    content: "\f148";
    display: inline-block;
    font-family: bootstrap-icons !important;
    font-style: normal;
    font-weight: normal !important;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    font-size: 0.9rem;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    color: var(--bs-white);
    z-index: 5;
    position: absolute;
    left: 0.25rem;
    top: 4.65rem;
    transform: rotate(0deg);
    transition: transform .4s ease-in-out;
}
.pagefind-ui__filter-block[open] summary::after {
    transform: rotate(90deg);
}
.pagefind-ui__filter-panel-label,
.pagefind-ui__filter-group-label {
    display: none;
}
.pagefind-ui__message {
    @extend .lead !optional;
    margin-top: 2rem;
}
.pagefind-ui__filter-value:first-of-type {
    --bs-btn-border-radius: .5rem;
    border-top-left-radius: var(--bs-btn-border-radius);
    border-top-right-radius: var(--bs-btn-border-radius);
}
.pagefind-ui__filter-checkbox {
    position: absolute;
    right: 1rem;
    top: 0.9rem;
}
.pagefind-ui__filter-label {
    width: 100%;
    height: 100%;
    padding: var(--bs-list-group-item-padding-y) var(--bs-list-group-item-padding-x);
    cursor: pointer;
}
.pagefind-ui__filter-checkbox:checked+.pagefind-ui__filter-label {
    --bs-bg-opacity: 0.1;
    background-color: rgba(var(--bs-success-rgb), var(--bs-bg-opacity)) !important;
}

